# snowScatt

./: .gitignore  .readthedocs.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  ssrga_coeffs_simultaneous_0.2.csv  ssrga_coeffs_simultaneous_1.0.csv  ssrga_coeffs_simultaneous_2.0.csv  ssrga_coeffs_subsequent_0.5.csv  ssrga_coeffs_subsequent_2.0.csv
cython/: ssrgaLib.pxd  ssrga_module.pyx
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  credits.rst  fallspeed.rst  index.rst  install.rst  instrumentSimulator.rst  refractiveIndex.rst  simple_usage.rst  snowProperties.rst  snowScatt.rst  ssrga.rst  troubleshooting.rst
examples/: prepare_area_functions.py  prepare_ssrga_table.py  script_calc_Doppler_spectra.py  script_make_radar_lookup_table.py  script_make_triple_frequency_Maherndl.py  script_make_triple_frequency_plot.py  ssrga_beta_gamma_asymptote.py
examples/GMD_paper_2021/: Fig1_ssrga_beta_gamma_asymptote.py  Fig3_plot_agg_shape.py  Fig5_6_ssrga_evaluation.py  Fig7_ensemble_subsampling.py  Fig8_9_P3_application.py  Fig_1_ssrga_beta_gamma_asymptote.py  README  download_data_run_all_scripts.sh  microphysical_function.py  particle_properties.py  plot_agg_shape.py  scattering_functions.py  ssrga_evaluation.py
python/: __init__.py  _compute.py  _constants.py  compute.py
python/fallSpeed/: __init__.py  _fallSpeedModels.py  fallSpeedModels.py
python/instrumentSimulator/: PSD.py  radarMoments.py  radarSpectrum.py
python/radarSimulator/: PSD.py
python/refractiveIndex/: __init__.py  core.py  ice.py  mixing.py  snow.py  utilities.py
python/snowProperties/: __init__.py  _readProperties.py  readProperties.py  ssrga_coeffs_Ori_collection_columns.csv  ssrga_coeffs_column.csv  ssrga_coeffs_column_M_0p00.csv  ssrga_coeffs_column_M_0p0129.csv  ssrga_coeffs_column_M_0p0205.csv  ssrga_coeffs_column_M_0p0324.csv  ssrga_coeffs_column_M_0p0514.csv  ssrga_coeffs_column_M_0p0816.csv  ssrga_coeffs_column_M_0p1290.csv  ssrga_coeffs_column_M_0p2045.csv  ssrga_coeffs_column_M_0p3245.csv  ssrga_coeffs_column_M_0p5145.csv  ssrga_coeffs_column_M_0p8155.csv  (+81 more)
snowScatt/: __init__.py  compute.py
src/: dielectric_factor.c  dielectric_factor.h  ssrga.c  ssrga.h
(+14 files in other folders)
